--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^9.17.2",
     "json-server": "^0.17.2",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-leaflet": "^4.2.1",
