--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "firebase": "^9.17.2",
+    "google-map-react": "^2.2.0",
     "json-server": "^0.17.2",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
@@ -45,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/google-map-react": "^2.1.7"
   }
 }
